# minter-android-core

./: .gitignore  .gitmodules  README.md  RELEASE.md  build.gradle  gradle.properties  proguard-rules.pro  publisher.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: btn_blue.xml  btn_grey_bg_bb.xml  btn_white.xml  btn_white_bb.xml  ic_menu_settings.xml
app/src/main/res/drawable-v21/: btn_blue.xml  btn_blue_wb.xml  btn_grey_bg_bb.xml  btn_white.xml  btn_white_bb.xml
app/src/main/res/layout/: activity_address_item.xml  activity_address_list.xml  activity_advanced_generate.xml  activity_advanced_main.xml  activity_convert_coin.xml  activity_home.xml  activity_main.xml  activity_register.xml  activity_signin.xml  activity_transaction_list.xml  fragment_settings_list.xml  fragment_tab_coins.xml  fragment_tab_receive.xml  fragment_tab_send.xml  fragment_tab_settings.xml  fragment_update_field.xml  fragment_update_field_basic.xml  inc_dialog_input_prefix.xml  inc_dialog_input_simple.xml  inc_dialog_tx_send_complete.xml  inc_dialog_tx_send_start.xml  inc_dialog_tx_send_wait.xml  item_list_address.xml  item_list_dialog_account_selector.xml  item_list_dialog_selector.xml  item_list_transaction_expandable.xml  item_list_with_image.xml  row_list_with_button.xml  row_settings_avatar.xml  wallet_account_selector_dialog.xml  wallet_confirm_dialog.xml  wallet_progress_dialog.xml
app/src/main/res/menu/: menu_tab_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styleable.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
ethereuman/: build.gradle
ethereuman/src/main/: AndroidManifest.xml
ethereuman/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
minter_blockchain_api/: build.gradle
minter_explorer_api/: build.gradle
minter_explorer_api/src/main/: AndroidManifest.xml
minter_explorer_api/src/main/res/values/: strings.xml
mintercore/: build.gradle  proguard-rules.pro
mintercore/src/main/: AndroidManifest.xml
mintercore/src/main/cpp/: CMakeLists.txt
myminter/: build.gradle
myminter/src/main/: AndroidManifest.xml
myminter/src/main/res/values/: strings.xml
src/androidTest/java/network/minter/core/: MinterTestRunner.java  NativeBip39MnemonicTest.java  NativeHDKeyEncoderTest.java  NativeSecp256k1Test.java  PrivateKeyTest.java
src/androidTest/java/network/minter/mintercore/: NativeBip39MnemonicTest.java  NativeHDKeyEncoderTest.java  NativeSecp256k1Test.java  PrivateKeyTest.java
src/main/: AndroidManifest.xml
src/main/cpp/bip39/: CMakeLists.txt
src/main/cpp/bip39/src/: main.cpp
src/main/cpp/bip39/src/java/: network_minter_mintercore_bip39_NativeBip39.cpp  (+1 more)
src/main/cpp/secp256k1/: .gitignore  .gitmodules  AndroidDetermine.cmake  CMakeLists.txt  README.md
src/main/cpp/secp256k1/contrib/: lax_der_parsing.c  lax_der_parsing.h  lax_der_privatekey_parsing.c  lax_der_privatekey_parsing.h
src/main/cpp/secp256k1/include/: secp256k1.h  secp256k1_ecdh.h  secp256k1_recovery.h
src/main/cpp/secp256k1/src/: bench.h  bench_ecdh.cpp  bench_ecmult.cpp  bench_internal.cpp  bench_recover.cpp  bench_sign.cpp  bench_verify.cpp  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  ecmult_static_context.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  gen_context.cpp  group.h  group_impl.h  hash.h  hash_impl.h  num.h  num_gmp.h  num_gmp_impl.h  num_impl.h  scalar.h  scalar_4x64.h  scalar_4x64_impl.h  scalar_8x32.h  scalar_8x32_impl.h  (+10 more)
src/main/cpp/secp256k1/src/java/: NativeSecp256k1.cpp  NativeSecp256k1.h
src/main/cpp/secp256k1/src/modules/ecdh/: main_impl.h  tests_impl.h
src/main/cpp/secp256k1/src/modules/recovery/: main_impl.h  tests_impl.h
src/main/res/values/: strings.xml
(+465 files in other folders)
